fix: band-aid to mobile overflow

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+html, body {
+	/* FIXME: underlying issue, smt. is bigger than 100% */
+	overflow-x: hidden;
+}
+
 body {
 	font-family: 'Rajdhani', sans-serif;
 	color: black;
